# terraform-api-aws-lambda

./: .gitignore  README.md  package.json  serverless.yml
.github/workflows/: build-push.yml  deploy-by-tf-run.yml  main.yml  payload-run-post.json  terraform-fmt-check.yml  terraform-fmt-fix.yml  terraform-fmt.yml  terraform-run-on-distpatch.yml  terraform.yml  tf-workspace_create.yml
hello/src/: main.rs
notification/: Cargo.toml
notification/src/: main.rs
scripts/: cibuild
tfe-api/: aws_api_gateway.tf  aws_lambda.tf  aws_vpc.tf  providers.tf  variables.tf  workspace-payload.json
world/: Cargo.toml
world/src/: main.rs
