[package]
name = "notification"
version = "0.1.2"
edition = "2018"

[dependencies]
tokio = { version = "1.3.0", features = ["macros","rt-multi-thread"] }
lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
