[package]
name = "notification"
version = "0.1.5"
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
hyper = { version = "0.13" }
hyper-tls = { version = "0.4" }

lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
