[package]
name = "world"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rustc-serialize = "0.3"
hmac = "0.10.1"
sha2 = "0.9.3"
hex = "0.4.3"